--- a/2_CSS3/CSS/13_transform-style.css
+++ b/2_CSS3/CSS/13_transform-style.css
@@ -120,19 +120,20 @@ img{
 .box{
     width: 100px;
     height: 100px;
-    border: solid black;
+    border: 1px solid black;
     background-color: deeppink;
+
+      /* 변형 기간(변형 되는데 걸리는 시간 지정) */
+      transition-duration: 1s; /* 1초 */
 }
 
 .test1:hover{
-
-    /* 변형 기간(변형 되는데 걸리는 시간 지정) */
-    transition-duration: 1s; /* 1초 */
+    background-color: yellow;
 }
 
 
 .test2{
-    transition-duration: 3s;
+    transition-duration: 10s;
 }
 
 .test2:hover{
@@ -146,7 +147,7 @@ img{
     /*  linear | ease(기본값) | ease-in | ease-out | ease-in-out | cublic-bezier(n,n,n,n) */
     /* transition-timing-function: cubic-bezier(0.3, 0.3, 1, 0.5);   */
     transition-duration: 5s;
-    transition-timing-function: ease-in-out;
+    transition-timing-function: linear;
 }
 
 .test3:hover{
